PIP-307 Clean up warnings